test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-deletion-request/02-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      file: manifests.yaml
