test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-deletion-request/03-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: apps/v1
      kind: DaemonSet
      name: test-deletion-request-datadog-operator
      namespace: cpol-validate-psa-test-deletion-request
